<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExerciceMaster</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="please_select">请选择一个项目</string>
    <string name="input_num">输入数量</string>
    <string name="group_one">第一组：</string>
	<string name="group_two">第二组：</string>
	<string name="group_three">第三组：</string>
	<string name="group_four">第四组：</string>
	<string name="group_five">第五组：</string>
	<string-array name="type_arr">
	   	 <item>俯卧撑</item>
	     <item>仰卧起坐</item>
	      <item>哑铃</item>
	</string-array>
</resources>
